--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "1.3.2",
+		"underscore": "~1.7.0",
     "todomvc-common": "~0.3.0"
   },
   "devDependencies": {
